# conus404_ba

./: README.md  code.json  pyproj.toml  pyproject.toml
conus404-ba/: conus404_config.py  version.py
conus404-ba/conus404_bc_daily_gfv1_1/: c404_calc_wghts.ipynb  run_weights_c404bc.ipynb
conus404-ba/conus404_bc_daily_zarr/: conus404_biascorrected_hourly_to_daily.py  create_empty_daily_biascorrected_zarr.py  hourly_to_daily.sbatch
conus404-ba/conus404_bc_hourly_zarr/: model_output_to_zarr.py  to_zarr.sbatch
conus404_ba/: conus404.yml  conus404_config.py  conus404_helpers.py  version.py
conus404_ba/conus404_ba_daily/: README.md  c404_ba_daily_workflow.py  submit_c404-ba_daily_workflow.sh  to_daily_zarr.sbatch  to_zarr.sbatch
conus404_ba/conus404_ba_daily_gfv1_1/: README.md
conus404_ba/conus404_ba_hourly/: README.md  c404_ba_hourly_workflow.py  submit_c404-ba_hourly_workflow.sh  submit_c404-ba_workflow.sh  to_hourly_zarr.sbatch  to_zarr.sbatch
conus404_ba/conus404_bc_daily/: c404_ba_daily_workflow.py
conus404_ba/conus404_bc_daily_gfv1_1/: README.md
conus404_ba/conus404_bc_hourly/: c404-ba_workflow.py  c404_ba_hourly_workflow.py  c404_ba_workflow.py  create_empty_zarr_store.py  extend_zarr_time.py  model_output_to_zarr.py  rechunk.sbatch
conus404_ba/conus404_bc_hourly_zarr/: README.md  conus404_biascorrected_to_zarr.py  conus404_rechunk_bias_corrected.py  create_empty_zarr_store.py  model_output_to_zarr.py  single_rechunk.py
