[build-system]
requires = ["setuptools>=61"]   # , "setuptools-scm", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "conus404_ba"
description = "Utilities for creating cloud-optimized datasets from the bias-adjusted CONUS404 model output"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Parker Norton", email = "pnorton@usgs.gov"}, ]
maintainers = [{name = "Parker Norton", email = "pnorton@usgs.gov"}, ]
keywords = ["CONUS404", "HyTEST"]
classifiers = ["Development Status :: 3 - Alpha",
               "Programming Language :: Python :: 3", ]

dependencies = ["cyclopts",
    "dask",
    "dask-jobqueue",
    "fsspec",
    "mypy_extensions",
    "netcdf4",
    "numcodecs",
    "numpy",
    "pandas",
    "pyproj",
    "rechunker",
    "rich",
    "ruamel.yaml",
    "xarray<3.0",
    "zarr", ]

[project.urls]
Repository = "https://github.com/hytest-org/conus404_ba.git"

[project.scripts]
c404-ba_hourly_workflow = "conus404_ba.conus404_ba_hourly.c404_ba_hourly_workflow:main"
c404-ba_daily_workflow = "conus404_ba.conus404_ba_daily.c404_ba_daily_workflow:main"

[tool.setuptools]
include-package-data = false
zip-safe = false

[tool.setuptools.dynamic]
version = {attr = "conus404_ba.version.__version__"}

[tool.setuptools.packages.find]
include = ["conus404_ba", "conus404_ba.*"]
